<resources>
    <string name="app_name">TeleMedicine</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="phone">Enter Phone Number</string>
    <string name="email">Email</string>
    <string name="name">Enter Full Name</string>
    <string name="register">Register</string>
    <string name="already_have_account">Already have an account</string>
    <string name="welcome">Welcome!</string>
    <string name="conti">Log in to continue</string>
    <string name="login">Login</string>
    <string name="hi">Hi!</string>
    <string name="new_count">Create a new account</string>
    <string name="welcome_msg">Hi</string>
    <string name="onboardingmsg">We need some basic info</string>
    <string name="reg_no">Enter your Reg Number</string>
    <string name="Qualification">Qualification</string>
    <string name="Speciality">Speciality</string>
    <string name="LocationofClinic">Location of\nClinic</string>
    <string name="TimeSlots">Time Slots</string>
    <string name="MorningSlot">Morning Slot</string>
    <string name="EveningSlot">Evening Slot</string>
    <string name="AfterSlot">AfterNoon Slot</string>
    <string name="save">Save</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="home">Home</string>
    <string name="reports">Reports</string>
    <string name="profile">My Profile</string>
    <string name="appointments">Appointments</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="age">Enter Age</string>
    <string name="gender">Gender</string>
    <string name="consultation_fees">Consulation Fees in rs</string>
    <string name="location">Enter Location Of Clinic </string>
    <string name="experience">Enter your Experience in (yrs)</string>
    <string name="slots">Add Available Slots</string>
    <string name="dates">Add Available Dates</string>
    <string name="slot1">Morning Slot</string>
    <string name="From">From</string>
    <string name="To">to</string>
    <string name="pick">Pick</string>
    <string name="slot2">Afternoon Slot</string>
    <string name="slot3">Evening Slot</string>
    <string name="upload">Upload</string>
    <string name="select_the_slot">Consulation Calendar</string>
    <string name="dates_available">Dates</string>
    <string name="edit_slot">Edit Calendar</string>
    <string name="medico">Medico</string>
    <string name="bloodGroup">Blood Group</string>
    <string name="pastMedicalHistory">Write Past Medical History briefly.....</string>
    <string name="dr">Dr</string>
    <string name="book_apppointment">Book Appointment</string>
    <string name="doctor_list">Doctor List</string>
    <string name="doctor_detail">Doctor Detail</string>
    <string name="Next">Next</string>
    <string name="doctor">Doctor</string>
    <string name="Patient">Patient</string>
    <string name="getStarted">Let\'s Get Started</string>
    <string name="PatientOnboarding">My Information</string>
    <string name="DoctorOnboarding">My Information</string>
    <string name="available">Available</string>
    <string name="select_appointment">Select Appointment</string>
    <string name="your_consulations">My Consulations</string>
    <string name="listofdoctors">List of doctor\'s in </string>
    <string name="Autodetect">Auto Detect</string>
    <string name="edit">Edit</string>
    <string name="upload_prescription_image">Upload Prescription</string>
    <string name="prescriptions">Prescriptions</string>
    <string name="your_prescriptions">My Prescriptions</string>
    <string name="error_consulation_msg">No Consulations found for now !!!!</string>
    <string name="logout">Log Out</string>
    <string name="error_prescription_msg">Seems Like you are healthy\nno Prescriptions found for now !!!</string>
    <string name="no_doctors_found_in_your_area">Sorry we couldnot \nfind doctors at this location !!!</string>
    <string name="share">"Share"</string>
    <string name="select_prescription">Select Prescription</string>
    <string name="prescription_uploading">Prescription Uploading</string>
    <string name="patient_profile">Patient Profile</string>
    <string name="uploaddoc">Upload Reports</string>
    <string name="myreports">My Reports</string>
    <string name="choose_one">WHO ARE YOU ?</string>
    <string name="select_date">Select Date</string>
    <string name="no_medical_reports_found">Seems Like you are healthy no medical reports found !!!</string>
</resources>