<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_screen"
    tools:context=".ui.registration.RegsitrationActivity">

    <ImageView
        android:id="@+id/image"
        android:layout_width="193dp"
        android:layout_height="177dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_undraw_join_re_w1lh"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserratbold"
        android:text="@string/new_count"
        android:textColor="@color/white"
        android:textSize="@dimen/text_medium"
        app:layout_constraintBottom_toTopOf="@+id/nestedScrollView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.173"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_sec"
        app:layout_constraintVertical_bias="0.59000003" />

    <TextView
        android:id="@+id/textView_sec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserratbold"
        android:text="@string/hi"
        android:textColor="@color/white"
        android:textSize="@dimen/text_extra_large"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.097"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.26999998" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.87">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_email"
                android:layout_width="320dp"
                android:layout_height="45dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/text_field_background"
                android:drawableStart="@drawable/ic_baseline_email_24"
                android:drawablePadding="20dp"
                android:ems="10"
                android:fontFamily="@font/montserrat"
                android:hint="@string/email"
                android:inputType="textPersonName"
                android:paddingStart="15dp" />


            <LinearLayout
                android:id="@+id/ll_password"
                android:layout_width="320dp"
                android:layout_height="45dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/text_field_background">


                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="280dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/text_field_background"
                    android:drawableStart="@drawable/ic_baseline_lock_24"
                    android:drawablePadding="20dp"
                    android:ems="10"
                    android:fontFamily="@font/montserrat"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingStart="15dp" />

                <ImageView
                    android:id="@+id/password_visible"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_baseline_visibility_off_24" />


            </LinearLayout>


            <LinearLayout
                android:id="@+id/ll_confirm_password"
                android:layout_width="320dp"
                android:layout_height="45dp"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="20dp"
                android:background="@drawable/text_field_background">


                <EditText
                    android:id="@+id/et_confirm_password"
                    android:layout_width="280dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/text_field_background"
                    android:drawableStart="@drawable/ic_baseline_lock_24"
                    android:drawablePadding="20dp"
                    android:ems="10"
                    android:fontFamily="@font/montserrat"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:paddingStart="15dp" />

                <ImageView
                    android:id="@+id/confirm_password_visible"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_baseline_visibility_off_24" />


            </LinearLayout>

            <Button
                android:id="@+id/btn_register"
                android:layout_width="160dp"
                android:layout_height="45dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:background="@drawable/button_background"
                android:fontFamily="@font/montserratbold"
                android:text="@string/register" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="80dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_already"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserratbold"
                    android:hint="@string/already_have_account"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tv_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/montserratbold"
                    android:text="@string/login"
                    android:textColor="@color/light_blue" />


            </LinearLayout>


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>
</layout>