<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_screen_background"
        tools:context=".ui.onboarding.DoctorInfo">


        <RelativeLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:src="@drawable/ic_baseline_arrow_back_ios_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/montserrat"
                android:text="@string/DoctorOnboarding"
                android:textColor="@color/black"
                android:textSize="@dimen/text_large" />


        </RelativeLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
            app:layout_constraintVertical_bias="0.0">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <!--                <de.hdodenhof.circleimageview.CircleImageView-->
                <!--                    android:id="@+id/doctor_photo"-->
                <!--                    android:layout_width="200dp"-->
                <!--                    android:layout_height="200sp"-->
                <!--                    android:layout_gravity="center_horizontal"-->
                <!--                    android:layout_marginTop="50dp"-->
                <!--                    app:civ_border_color="#FF000000"-->
                <!--                    app:civ_border_width="2dp" />-->

                <!--                <Button-->
                <!--                    android:id="@+id/btn_upload"-->
                <!--                    android:layout_width="160dp"-->
                <!--                    android:layout_height="45dp"-->
                <!--                    android:layout_gravity="center_horizontal"-->
                <!--                    android:layout_marginTop="30dp"-->
                <!--                    android:layout_marginBottom="30dp"-->
                <!--                    android:background="@drawable/button_background"-->
                <!--                    android:fontFamily="@font/montserratbold"-->
                <!--                    android:text="@string/upload" />-->

                <EditText
                    android:id="@+id/et_name"
                    android:layout_width="320dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/text_field_background"
                    android:ems="10"
                    android:fontFamily="@font/montserrat"
                    android:hint="@string/name"
                    android:inputType="textPersonName"
                    android:paddingStart="35dp" />

                <EditText
                    android:id="@+id/et_age"
                    android:layout_width="320dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/text_field_background"
                    android:ems="10"
                    android:maxLength="2"
                    android:fontFamily="@font/montserrat"
                    android:hint="@string/age"
                    android:inputType="number"
                    android:paddingStart="35dp" />

                <EditText
                    android:id="@+id/et_phone"
                    android:layout_width="320dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/text_field_background"
                    android:maxLength="10"
                    android:fontFamily="@font/montserrat"
                    android:hint="@string/phone"
                    android:inputType="number"
                    android:paddingStart="35dp" />

                <LinearLayout
                    android:layout_width="320dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/spinner_background"
                    android:orientation="horizontal">

                    <Spinner
                        android:id="@+id/sp_gender"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal"
                        android:fontFamily="@font/montserrat"
                        android:paddingStart="30dp"
                        android:prompt="@string/Qualification"
                        android:spinnerMode="dropdown" />


                </LinearLayout>

                <EditText
                    android:id="@+id/et_reg_no"
                    android:layout_width="320dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/text_field_background"
                    android:maxLength="5"
                    android:fontFamily="@font/montserrat"
                    android:hint="@string/reg_no"
                    android:inputType="number"
                    android:paddingStart="35dp" />

                <LinearLayout
                    android:layout_width="320dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/spinner_background"
                    android:orientation="horizontal">

                    <Spinner
                        android:id="@+id/sp_degree"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:dropDownVerticalOffset="20dp"
                        android:fontFamily="@font/montserrat"
                        android:paddingStart="30dp"
                        android:prompt="@string/Qualification"
                        android:spinnerMode="dropdown" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="320dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/spinner_background"
                    android:orientation="horizontal">

                    <Spinner
                        android:id="@+id/sp_speciality"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal"
                        android:fontFamily="@font/montserrat"
                        android:paddingStart="30dp"
                        android:spinnerMode="dropdown" />

                </LinearLayout>

                <EditText
                    android:id="@+id/et_experience"
                    android:layout_width="320dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/text_field_background"
                    android:ems="10"
                    android:maxLength="2"
                    android:fontFamily="@font/montserrat"
                    android:hint="@string/experience"
                    android:inputType="number"
                    android:paddingStart="35dp" />


                <EditText
                    android:id="@+id/et_location"
                    android:layout_width="320dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/text_field_background"
                    android:fontFamily="@font/montserrat"
                    android:gravity="start|center"
                    android:hint="@string/location"
                    android:paddingStart="35dp"
                    android:textSize="17sp" />

                <TextView
                    android:text="OR"
                    android:fontFamily="@font/montserrat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"/>

                <TextView
                    android:id="@+id/tv_autodetect_location"
                    android:layout_width="320dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/text_field_background"
                    android:fontFamily="@font/montserrat"
                    android:gravity="center"
                    android:hint="@string/Autodetect"
                    android:textSize="17sp" />


                <Button
                    android:id="@+id/btn_save"
                    android:layout_width="160dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="80dp"
                    android:background="@drawable/button_background"
                    android:fontFamily="@font/montserratbold"
                    android:text="@string/next" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>